// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test array is valid, but one item is not 1`] = `
{
  "errorMessage": "Should be at least 5 characters.",
  "errorPath": [
    0,
  ],
  "isValid": false,
  "items": [
    {
      "errorMessage": "Should be at least 5 characters.",
      "errorPath": [],
      "isValid": false,
    },
    {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
    },
    {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
    },
  ],
}
`;

exports[`Test simple array 1`] = `
{
  "errorMessage": "Should have at least 3 items.",
  "errorPath": [],
  "isValid": false,
  "items": [
    {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
    },
    {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
    },
  ],
}
`;

exports[`Test simple array values 1`] = `
{
  "errorMessage": "Should have at least 3 items.",
  "errorPath": [],
  "isValid": false,
  "items": [
    {
      "errorMessage": "Should be at least 5 characters.",
      "errorPath": [],
      "isValid": false,
    },
    {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
    },
  ],
}
`;
